--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <title>Skate Run</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -20,7 +22,7 @@
 
     <!-- 上：ゲーム描画（操作エリアと必ず分離） -->
     <main id="gameArea" aria-label="Game Area">
-      <canvas id="gameCanvas" width="360" height="640"></canvas>
+      <canvas id="gameCanvas"></canvas>
       <div id="overlay">
         <div id="overlayTitle">Loading...</div>
         <div id="overlayMsg">画像を読み込んでいます</div>
@@ -57,8 +59,8 @@
       </div>
 
       <div id="tips">
-        <div class="tip">操作はこのエリア内だけで完結します（ゲーム画面と分離）。</div>
-        <div class="tip">PCなら Space=Jump / B=Boost / N=JumpBoost</div>
+        <div class="tip">操作はこのエリア内だけで完結（ゲーム画面と分離）。</div>
+        <div class="tip">PC: Space=Jump / B=Boost / N=JumpBoost</div>
       </div>
     </footer>
   </div>
