Clean up comments in index.html
Removed commented sections for clarity.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
       </div>
     </header>
 
-    <!-- 上：ゲーム描画（操作エリアと必ず分離） -->
     <main id="gameArea" aria-label="Game Area">
       <canvas id="gameCanvas"></canvas>
 
-      <!-- オーバーレイ（Loading / CountDown / Result） -->
-      <div id="overlay" class="">
+      <div id="overlay">
         <div id="overlayTitle">Loading...</div>
         <div id="overlayMsg">画像を読み込んでいます</div>
 
@@ -38,7 +36,6 @@
       </div>
     </main>
 
-    <!-- 下：操作エリア（固定） -->
     <footer id="controlArea" aria-label="Control Area">
       <div id="gaugeWrap">
         <div class="gaugeLabel">BOOST STOCK</div>
