Update index.html for version 1 changes

--- a/index.html
+++ b/index.html
@@ -1,74 +1,41 @@
-<!-- index.html -->
 <!doctype html>
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <title>MOB STREET - 1P RUN</title>
+  <title>MOB STREET V1</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="app">
-    <header id="topbar">
-      <div class="brand">MOB STREET - 1P RUN</div>
-      <div class="hud">
-        <div class="hud-item"><span class="label">SPEED</span><span id="hudSpeed" class="value">0</span></div>
-        <div class="hud-item"><span class="label">DIST</span><span id="hudDist" class="value">0</span></div>
-        <div class="hud-item"><span class="label">FPS</span><span id="hudFps" class="value">0</span></div>
-      </div>
-    </header>
+    <!-- PLAY AREA (canvas only) -->
+    <div id="playArea">
+      <canvas id="game" aria-label="game canvas"></canvas>
 
-    <main id="gameArea" aria-label="Game Area">
-      <canvas id="gameCanvas"></canvas>
+      <!-- HUD overlay (canvasと分離) -->
+      <div id="hud">
+        <div id="verBadge">V1</div>
 
-      <div id="overlay">
-        <div id="overlayTitle">Loading...</div>
-        <div id="overlayMsg">画像を読み込んでいます</div>
-
-        <div id="overlayPanel" class="panel hidden">
-          <div id="panelBody"></div>
-          <div class="panelBtns">
-            <button id="btnRetry" class="panelBtn" type="button">RETRY</button>
+        <div id="hudRight">
+          <div class="hudBox">
+            <div class="hudLabel">BOOST</div>
+            <div id="boostGauge" class="hudValue">0 / 5</div>
           </div>
         </div>
       </div>
-    </main>
 
-    <footer id="controlArea" aria-label="Control Area">
-      <div id="gaugeWrap">
-        <div class="gaugeLabel">BOOST STOCK</div>
-        <div id="gauge" class="gauge">
-          <div class="pip" data-i="0"></div>
-          <div class="pip" data-i="1"></div>
-          <div class="pip" data-i="2"></div>
-        </div>
-        <div id="gaugeNote" class="gaugeNote">3秒に1つ回復（最大3）</div>
-      </div>
+      <!-- 起動直後に1秒だけ中央に出す（見落とし防止） -->
+      <div id="bootToast">V1</div>
+    </div>
 
-      <div id="buttons">
-        <button id="btnJump" class="btn primary" type="button">
-          JUMP
-          <span class="sub">2段ジャンプ</span>
-        </button>
-
-        <button id="btnBoost" class="btn accent" type="button">
-          BOOST
-          <span class="sub">1回押し / ストック1</span>
-        </button>
-
-        <button id="btnJumpBoost" class="btn danger" type="button">
-          JUMP BOOST
-          <span class="sub">ストック3 / 超ジャンプ</span>
-        </button>
-      </div>
-
-      <div id="tips">
-        <div class="tip">操作はこのエリア内だけ（ゲーム画面と分離）。</div>
-        <div class="tip">PC: Space=Jump / B=Boost / N=JumpBoost</div>
-      </div>
-    </footer>
+    <!-- CONTROL AREA (DOM buttons) -->
+    <div id="controlArea">
+      <button id="btnJump" class="btn primary" type="button">JUMP</button>
+      <button id="btnBoost" class="btn" type="button">BOOST</button>
+      <button id="btnJumpBoost" class="btn disabled" type="button" aria-disabled="true">JUMP BOOST<br><small>（V1は無効）</small></button>
+    </div>
   </div>
 
   <script src="game.js"></script>
