--- a/index.html
+++ b/index.html
@@ -1,43 +1,53 @@
+<!-- index.html : MOB STREET - 1P RUN (V3) -->
 <!doctype html>
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <title>MOB STREET V2</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+  <title>MOB STREET - 1P RUN</title>
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div id="app">
-    <!-- PLAY AREA (canvas only) -->
-    <div id="playArea">
-      <canvas id="game" aria-label="game canvas"></canvas>
+    <!-- GAME AREA -->
+    <div id="gameArea">
+      <canvas id="gameCanvas"></canvas>
 
-      <!-- HUD overlay (canvasと分離) -->
+      <!-- HUD -->
       <div id="hud">
-        <div id="verBadge">V2</div>
-
-        <div id="hudRight">
-          <div class="hudBox">
-            <div class="hudLabel">BOOST</div>
-            <div id="boostGauge" class="hudValue">0 / 5</div>
+        <div class="hudRow">
+          <div id="badgeVersion" class="badge">V3</div>
+          <div class="hudRight">
+            <div id="boostHud" class="badge badgeWide">BOOST <span id="boostText">0 / 5</span></div>
           </div>
+        </div>
+
+        <div class="hudRow hudRow2">
+          <div id="centerBadge" class="badge badgeCenter">V3</div>
+        </div>
+
+        <div class="hudRow hudRow3">
+          <div id="playerTag" class="playerTag">プレイヤー</div>
         </div>
       </div>
 
-      <!-- 起動直後に1秒だけ中央に出す（見落とし防止） -->
-      <div id="bootToast">V2</div>
+      <!-- Loading -->
+      <div id="loading" class="overlay">
+        <div class="loadingTitle">Loading...</div>
+        <div class="loadingSub">画像を読み込んでいます</div>
+      </div>
     </div>
 
-    <!-- CONTROL AREA (DOM buttons) -->
+    <!-- CONTROL AREA (must be separated) -->
     <div id="controlArea">
-      <button id="btnJump" class="btn primary" type="button">JUMP</button>
-      <button id="btnBoost" class="btn" type="button">BOOST</button>
-      <button id="btnJumpBoost" class="btn disabled" type="button" aria-disabled="true">JUMP BOOST<br><small>（V2は無効）</small></button>
+      <div class="btnRow">
+        <button id="btnJump" class="btn btnJump">JUMP</button>
+        <button id="btnBoost" class="btn btnBoost">BOOST</button>
+        <button id="btnJumpBoost" class="btn btnJumpBoost" disabled>JUMP BOOST<br><span class="small">(V2は無効)</span></button>
+      </div>
     </div>
   </div>
 
-  <script src="game.js"></script>
+  <script src="./game.js"></script>
 </body>
 </html>
