--- a/index.html
+++ b/index.html
@@ -2,36 +2,41 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>MOB STREET - 1P RUN</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="app">
-    <!-- PLAY AREA -->
-    <div id="playArea">
-      <canvas id="game" width="360" height="640"></canvas>
+    <div id="playWrap">
+      <canvas id="game" width="720" height="900"></canvas>
 
       <!-- HUD -->
-      <div id="hud">
-        <div class="hudRow">
-          <div id="verBadge" class="badge">V3.1</div>
-          <div id="boostHud" class="hudBox">BOOST <span id="boostCount">0</span> / <span id="boostMax">5</span></div>
+      <div id="hudTop">
+        <div class="pill" id="verPill">V2</div>
+        <div class="pill" id="boostPill">BOOST <span id="boostTxt">0</span> / <span id="boostMaxTxt">5</span></div>
+      </div>
+
+      <div id="playerTag" class="tag">プレイヤー</div>
+
+      <!-- Center badge (for quick visual confirm) -->
+      <div id="centerBadge" class="pill big">V2</div>
+
+      <!-- Loading -->
+      <div id="loading" class="overlay">
+        <div class="loadingBox">
+          <div class="loadingTitle">Loading...</div>
+          <div class="loadingSub">画像を読み込んでいます</div>
         </div>
-        <div class="hudRow">
-          <div id="playerTag" class="hudTag">プレイヤー</div>
-        </div>
-        <div id="msg" class="msg"></div>
       </div>
     </div>
 
-    <!-- CONTROL AREA (separated) -->
-    <div id="controlArea">
-      <div class="btnRow">
-        <button id="btnJump" class="btn btnJump">JUMP</button>
-        <button id="btnBoost" class="btn btnBoost">BOOST</button>
-        <button id="btnJumpBoost" class="btn btnJumpBoost" disabled>JUMP<br/>BOOST<br/><span class="sub">(V2は無効)</span></button>
-      </div>
+    <div id="controls">
+      <button id="btnJump" class="btn blue">JUMP</button>
+      <button id="btnBoost" class="btn gray">BOOST</button>
+      <button id="btnJumpBoost" class="btn dark" disabled>
+        JUMP<br/>BOOST<br/><small>(V2は無効)</small>
+      </button>
     </div>
   </div>
 
